# neuron-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  package.json
src/discord-proxy/: package.json  pnpm-lock.yaml  tsconfig.json
src/discord-proxy/src/: commands.ts  index.ts  routes.ts  test.ts
src/discord-proxy/src/encrypted_maps/: index.ts  utils.ts
src/discord-proxy/src/governance/: index.ts  routes.ts  service.ts
src/discord-proxy/src/governance/bindings/: governance.did.d.ts  governance.did.js
src/discord-proxy/src/service/: index.ts
src/discord-proxy/src/service/user/: index.ts
src/discord-proxy/src/snsaggregator/: index.ts  service.ts
src/discord-proxy/src/stores/: index.ts  user.ts
src/discord-proxy/src/token/: index.ts  routes.ts  service.ts  store.ts
src/discord-proxy/src/user/: index.ts  routes.ts  service.ts  store.ts
src/discord-proxy/src/utils/: index.ts  progress.ts  render.ts
src/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/frontend/src/: App.tsx
src/frontend/src/components/copy/: index.tsx
src/frontend/src/lib/: identity.ts
src/registry-canister/: Cargo.toml  registry-canister.did
src/registry-canister/src/: lib.rs
src/sns-discord-bot-backend/: Cargo.toml
