[package]
name = "registry-canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-stable-structures = "0.6.9"
ic-vetkeys = "0.3.0"
ic-dummy-getrandom-for-wasm = "0.1.0"